--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
+          fetch-tags: true
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
