--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,10 @@ name: release
 on:
   workflow_dispatch:
   push:
-#    tags:
-#      - "v[0-9]+.[0-9]+.[0-9]+"
-    branches:
-      - master
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
+#    branches:
+#      - master
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 1
+          fetch-depth: 0
           fetch-tags: true
       - name: Setup Go
         uses: actions/setup-go@v3
