--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
-#    branches:
-#      - master
+permissions:
+  contents: write
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
